@@ -22,6 +22,7 @@ import static com.carrotsearch.randomizedtesting.RandomizedTest.randomBoolean;
 import static com.carrotsearch.randomizedtesting.RandomizedTest.systemPropertyAsBoolean;
 import static com.carrotsearch.randomizedtesting.RandomizedTest.systemPropertyAsInt;
 import static org.apache.lucene.search.DocIdSetIterator.NO_MORE_DOCS;
+import static org.apache.lucene.search.IndexSearcher.LeafSlice;
 
 import com.carrotsearch.randomizedtesting.JUnit4MethodProvider;
 import com.carrotsearch.randomizedtesting.LifecycleScope;
@@ -93,14 +94,18 @@ import java.util.Random;
 import java.util.Set;
 import java.util.TimeZone;
 import java.util.TreeSet;
+import java.util.concurrent.Executor;
+import java.util.concurrent.ExecutorService;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import junit.framework.AssertionFailedError;
 import org.apache.lucene.analysis.Analyzer;
+import org.apache.lucene.codecs.KnnVectorsFormat;
+import org.apache.lucene.codecs.bitvectors.HnswBitVectorsFormat;
+import org.apache.lucene.codecs.hnsw.FlatVectorsFormat;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.document.Field;
 import org.apache.lucene.document.Field.Store;
@@ -133,21 +138,25 @@ import org.apache.lucene.index.MergeScheduler;
 import org.apache.lucene.index.MultiBits;
 import org.apache.lucene.index.MultiDocValues;
 import org.apache.lucene.index.MultiTerms;
+import org.apache.lucene.index.NoDeletionPolicy;
 import org.apache.lucene.index.NumericDocValues;
 import org.apache.lucene.index.ParallelCompositeReader;
 import org.apache.lucene.index.ParallelLeafReader;
 import org.apache.lucene.index.PointValues;
 import org.apache.lucene.index.PostingsEnum;
-import org.apache.lucene.index.QueryTimeout;
 import org.apache.lucene.index.SerialMergeScheduler;
 import org.apache.lucene.index.SimpleMergedSegmentWarmer;
+import org.apache.lucene.index.SnapshotDeletionPolicy;
 import org.apache.lucene.index.SortedDocValues;
 import org.apache.lucene.index.SortedNumericDocValues;
 import org.apache.lucene.index.SortedSetDocValues;
+import org.apache.lucene.index.StoredFields;
+import org.apache.lucene.index.TermVectors;
 import org.apache.lucene.index.Terms;
 import org.apache.lucene.index.TermsEnum;
 import org.apache.lucene.index.TermsEnum.SeekStatus;
 import org.apache.lucene.index.TieredMergePolicy;
+import org.apache.lucene.index.VectorEncoding;
 import org.apache.lucene.internal.tests.IndexPackageAccess;
 import org.apache.lucene.internal.tests.TestSecrets;
 import org.apache.lucene.search.DocIdSetIterator;
@@ -164,7 +173,6 @@ import org.apache.lucene.store.FileSwitchDirectory;
 import org.apache.lucene.store.FlushInfo;
 import org.apache.lucene.store.IOContext;
 import org.apache.lucene.store.LockFactory;
-import org.apache.lucene.store.MMapDirectory;
 import org.apache.lucene.store.MergeInfo;
 import org.apache.lucene.store.NRTCachingDirectory;
 import org.apache.lucene.tests.analysis.MockAnalyzer;
@@ -174,6 +182,7 @@ import org.apache.lucene.tests.index.AssertingLeafReader;
 import org.apache.lucene.tests.index.FieldFilterLeafReader;
 import org.apache.lucene.tests.index.MergingCodecReader;
 import org.apache.lucene.tests.index.MergingDirectoryReaderWrapper;
+import org.apache.lucene.tests.index.MismatchedCodecReader;
 import org.apache.lucene.tests.index.MismatchedDirectoryReader;
 import org.apache.lucene.tests.index.MismatchedLeafReader;
 import org.apache.lucene.tests.index.MockIndexWriterEventListener;
@@ -188,7 +197,6 @@ import org.apache.lucene.tests.util.automaton.AutomatonTestUtil;
 import org.apache.lucene.util.Bits;
 import org.apache.lucene.util.BytesRef;
 import org.apache.lucene.util.CommandLineUtil;
-import org.apache.lucene.util.Constants;
 import org.apache.lucene.util.IOUtils;
 import org.apache.lucene.util.InfoStream;
 import org.apache.lucene.util.NamedThreadFactory;
@@ -474,7 +482,12 @@ public abstract class LuceneTestCase extends Assert {
    * of iterations to scale your tests (for nightly builds).
    */
   public static final int RANDOM_MULTIPLIER =
-      systemPropertyAsInt("tests.multiplier", TEST_NIGHTLY ? 2 : 1);
+      systemPropertyAsInt("tests.multiplier", defaultRandomMultiplier());
+
+  /** Compute the default value of the random multiplier (based on {@link #TEST_NIGHTLY}). */
+  static int defaultRandomMultiplier() {
+    return TEST_NIGHTLY ? 2 : 1;
+  }
 
   /** Leave temporary files on disk, even on successful runs. */
   public static final boolean LEAVE_TEMPORARY;
@@ -483,40 +496,17 @@ public abstract class LuceneTestCase extends Assert {
     boolean defaultValue = false;
     for (String property :
         Arrays.asList(
-            "tests.leaveTemporary" /* ANT tasks's (junit4) flag. */,
+            "tests.leaveTemporary" /* ANT tasks' (junit4) flag. */,
             "tests.leavetemporary" /* lowercase */,
-            "tests.leavetmpdir" /* default */,
-            "solr.test.leavetmpdir" /* Solr's legacy */)) {
+            "tests.leavetmpdir" /* default */)) {
       defaultValue |= systemPropertyAsBoolean(property, false);
     }
     LEAVE_TEMPORARY = defaultValue;
   }
 
-  /**
-   * Returns true, if MMapDirectory supports unmapping on this platform (required for Windows), or
-   * if we are not on Windows.
-   */
-  public static boolean hasWorkingMMapOnWindows() {
-    return !Constants.WINDOWS || MMapDirectory.UNMAP_SUPPORTED;
-  }
-
-  /**
-   * Assumes that the current MMapDirectory implementation supports unmapping, so the test will not
-   * fail on Windows.
-   *
-   * @see #hasWorkingMMapOnWindows()
-   */
-  public static void assumeWorkingMMapOnWindows() {
-    assumeTrue(MMapDirectory.UNMAP_NOT_SUPPORTED_REASON, hasWorkingMMapOnWindows());
-  }
-
   /** Filesystem-based {@link Directory} implementations. */
   private static final List<String> FS_DIRECTORIES =
-      Arrays.asList(
-          "NIOFSDirectory",
-          // NIOFSDirectory as replacement for MMapDirectory if unmapping is not supported on
-          // Windows (to make randomization stable):
-          hasWorkingMMapOnWindows() ? "MMapDirectory" : "NIOFSDirectory");
+      Arrays.asList("NIOFSDirectory", "MMapDirectory");
 
   /** All {@link Directory} implementations. */
   private static final List<String> CORE_DIRECTORIES;
@@ -557,7 +547,7 @@ public abstract class LuceneTestCase extends Assert {
   protected static TestRuleMarkFailure suiteFailureMarker;
 
   /** Temporary files cleanup rule. */
-  private static TestRuleTemporaryFilesCleanup tempFilesCleanupRule;
+  private static final TestRuleTemporaryFilesCleanup tempFilesCleanupRule;
 
   /**
    * Ignore tests after hitting a designated number of initial failures. This is truly a "static"
@@ -650,13 +640,7 @@ public abstract class LuceneTestCase extends Assert {
 
                     // We reset the default locale and timezone; these properties change as a
                     // side-effect
-                    "user.language",
-                    "user.timezone",
-
-                    // TODO: these should, ideally, be moved to Solr's base class.
-                    "solr.directoryFactory",
-                    "solr.solr.home",
-                    "solr.data.dir"))
+                    "user.language", "user.timezone"))
             .around(classEnvRule = new TestRuleSetupAndRestoreClassEnv());
   }
 
@@ -665,13 +649,14 @@ public abstract class LuceneTestCase extends Assert {
   // -----------------------------------------------------------------
 
   /** Enforces {@link #setUp()} and {@link #tearDown()} calls are chained. */
-  private TestRuleSetupTeardownChained parentChainCallRule = new TestRuleSetupTeardownChained();
+  private final TestRuleSetupTeardownChained parentChainCallRule =
+      new TestRuleSetupTeardownChained();
 
   /** Save test thread and name. */
-  private TestRuleThreadAndTestName threadAndTestNameRule = new TestRuleThreadAndTestName();
+  private final TestRuleThreadAndTestName threadAndTestNameRule = new TestRuleThreadAndTestName();
 
   /** Taint suite result with individual test failures. */
-  private TestRuleMarkFailure testFailureMarker = new TestRuleMarkFailure(suiteFailureMarker);
+  private final TestRuleMarkFailure testFailureMarker = new TestRuleMarkFailure(suiteFailureMarker);
 
   /**
    * This controls how individual test rules are nested. It is important that _all_ rules declared
@@ -685,13 +670,13 @@ public abstract class LuceneTestCase extends Assert {
           .around(new TestRuleSetupAndRestoreInstanceEnv())
           .around(parentChainCallRule);
 
-  private static final Map<String, FieldType> fieldToType = new HashMap<String, FieldType>();
+  private static final Map<String, FieldType> fieldToType = new HashMap<>();
 
   enum LiveIWCFlushMode {
     BY_RAM,
     BY_DOCS,
     EITHER
-  };
+  }
 
   /** Set by TestRuleSetupAndRestoreClassEnv */
   static LiveIWCFlushMode liveIWCFlushMode;
@@ -883,6 +868,18 @@ public abstract class LuceneTestCase extends Assert {
     RandomizedTest.assumeNoException(msg, e);
   }
 
+  public static void assertFloatUlpEquals(final float x, final float y, final short maxUlps) {
+    assertTrue(
+        x + " and " + y + " are not within " + maxUlps + " ULPs of each other",
+        TestUtil.floatUlpEquals(x, y, maxUlps));
+  }
+
+  public static void assertDoubleUlpEquals(final double x, final double y, final int maxUlps) {
+    assertTrue(
+        x + " and " + y + " are not within " + maxUlps + " ULPs of each other",
+        TestUtil.doubleUlpEquals(x, y, maxUlps));
+  }
+
   /**
    * Return <code>args</code> as a {@link Set} instance. The order of elements is not preserved in
    * iterators.
@@ -923,6 +920,13 @@ public abstract class LuceneTestCase extends Assert {
     dumpIterator(label, iter, stream);
   }
 
+  /** create a new index writer config with a snapshot deletion policy */
+  public static IndexWriterConfig newSnapshotIndexWriterConfig(Analyzer analyzer) {
+    IndexWriterConfig c = newIndexWriterConfig(analyzer);
+    c.setIndexDeletionPolicy(new SnapshotDeletionPolicy(NoDeletionPolicy.INSTANCE));
+    return c;
+  }
+
   /** create a new index writer config with random defaults */
   public static IndexWriterConfig newIndexWriterConfig() {
     return newIndexWriterConfig(new MockAnalyzer(random()));
@@ -953,10 +957,10 @@ public abstract class LuceneTestCase extends Assert {
     } else if (rarely(r)) {
       ConcurrentMergeScheduler cms;
       if (r.nextBoolean()) {
-        cms = new ConcurrentMergeScheduler();
+        cms = new TestConcurrentMergeScheduler();
       } else {
         cms =
-            new ConcurrentMergeScheduler() {
+            new TestConcurrentMergeScheduler() {
               @Override
               protected synchronized boolean maybeStall(MergeSource mergeSource) {
                 return true;
@@ -975,7 +979,8 @@ public abstract class LuceneTestCase extends Assert {
     } else {
       // Always use consistent settings, else CMS's dynamic (SSD or not)
       // defaults can change, hurting reproducibility:
-      ConcurrentMergeScheduler cms = new ConcurrentMergeScheduler();
+      ConcurrentMergeScheduler cms =
+          randomBoolean() ? new TestConcurrentMergeScheduler() : new ConcurrentMergeScheduler();
 
       // Only 1 thread can run at once (should maybe help reproducibility),
       // with up to 3 pending merges before segment-producing threads are
@@ -1065,6 +1070,7 @@ public abstract class LuceneTestCase extends Assert {
   public static LogMergePolicy newLogMergePolicy(Random r) {
     LogMergePolicy logmp = r.nextBoolean() ? new LogDocMergePolicy() : new LogByteSizeMergePolicy();
     logmp.setCalibrateSizeByDeletes(r.nextBoolean());
+    logmp.setTargetSearchConcurrency(TestUtil.nextInt(random(), 1, 16));
     if (rarely(r)) {
       logmp.setMergeFactor(TestUtil.nextInt(r, 2, 9));
     } else {
@@ -1107,6 +1113,12 @@ public abstract class LuceneTestCase extends Assert {
     } else {
       tmp.setSegmentsPerTier(TestUtil.nextInt(r, 10, 50));
     }
+    if (rarely(r)) {
+      tmp.setTargetSearchConcurrency(TestUtil.nextInt(r, 10, 50));
+    } else {
+      tmp.setTargetSearchConcurrency(TestUtil.nextInt(r, 2, 20));
+    }
+
     configureRandom(r, tmp);
     tmp.setDeletesPctAllowed(20 + random().nextDouble() * 30);
     return tmp;
@@ -1118,14 +1130,14 @@ public abstract class LuceneTestCase extends Assert {
     return logmp;
   }
 
-  public static MergePolicy newLogMergePolicy(boolean useCFS, int mergeFactor) {
+  public static LogMergePolicy newLogMergePolicy(boolean useCFS, int mergeFactor) {
     LogMergePolicy logmp = newLogMergePolicy();
     logmp.setNoCFSRatio(useCFS ? 1.0 : 0.0);
     logmp.setMergeFactor(mergeFactor);
     return logmp;
   }
 
-  public static MergePolicy newLogMergePolicy(int mergeFactor) {
+  public static LogMergePolicy newLogMergePolicy(int mergeFactor) {
     LogMergePolicy logmp = newLogMergePolicy();
     logmp.setMergeFactor(mergeFactor);
     return logmp;
@@ -1261,7 +1273,7 @@ public abstract class LuceneTestCase extends Assert {
         }
       } else {
         // but just in case of something ridiculous...
-        diff.append(current.toString());
+        diff.append(current);
       }
 
       // its possible to be empty, if we "change" a value to what it had before.
@@ -1385,8 +1397,7 @@ public abstract class LuceneTestCase extends Assert {
       }
 
       Directory fsdir = newFSDirectoryImpl(clazz, f, lf);
-      BaseDirectoryWrapper wrapped = wrapDirectory(random(), fsdir, bare, true);
-      return wrapped;
+      return wrapDirectory(random(), fsdir, bare, true);
     } catch (Exception e) {
       Rethrow.rethrow(e);
       throw null; // dummy to prevent compiler failure
@@ -1528,7 +1539,8 @@ public abstract class LuceneTestCase extends Assert {
             }
           }
         }
-        if (!newType.storeTermVectorOffsets()) {
+        // Check for strings as offsets are disallowed on binary fields
+        if (value instanceof String && !newType.storeTermVectorOffsets()) {
           newType.setStoreTermVectorOffsets(random.nextBoolean());
         }
 
@@ -1735,12 +1747,14 @@ public abstract class LuceneTestCase extends Assert {
             System.out.println(
                 "NOTE: LuceneTestCase.wrapReader: wrapping previous reader="
                     + r
-                    + " with MismatchedLeaf/DirectoryReader");
+                    + " with MismatchedLeaf/Directory/CodecReader");
           }
           if (r instanceof LeafReader) {
             r = new MismatchedLeafReader((LeafReader) r, random);
           } else if (r instanceof DirectoryReader) {
             r = new MismatchedDirectoryReader((DirectoryReader) r, random);
+          } else if (r instanceof CodecReader) {
+            r = new MismatchedCodecReader((CodecReader) r, random);
           }
           break;
         case 4:
@@ -1792,39 +1806,37 @@ public abstract class LuceneTestCase extends Assert {
 
   /** TODO: javadoc */
   public static IOContext newIOContext(Random random, IOContext oldContext) {
+    if (oldContext == IOContext.READONCE) {
+      return oldContext; // don't mess with the READONCE singleton
+    }
     final int randomNumDocs = random.nextInt(4192);
     final int size = random.nextInt(512) * randomNumDocs;
-    if (oldContext.flushInfo != null) {
+    if (oldContext.flushInfo() != null) {
       // Always return at least the estimatedSegmentSize of
       // the incoming IOContext:
       return new IOContext(
-          new FlushInfo(randomNumDocs, Math.max(oldContext.flushInfo.estimatedSegmentSize, size)));
-    } else if (oldContext.mergeInfo != null) {
+          new FlushInfo(
+              randomNumDocs, Math.max(oldContext.flushInfo().estimatedSegmentSize(), size)));
+    } else if (oldContext.mergeInfo() != null) {
       // Always return at least the estimatedMergeBytes of
       // the incoming IOContext:
       return new IOContext(
           new MergeInfo(
               randomNumDocs,
-              Math.max(oldContext.mergeInfo.estimatedMergeBytes, size),
+              Math.max(oldContext.mergeInfo().estimatedMergeBytes(), size),
               random.nextBoolean(),
               TestUtil.nextInt(random, 1, 100)));
     } else {
-      // Make a totally random IOContext:
+      // Make a totally random IOContext, except READONCE which has semantic implications
       final IOContext context;
-      switch (random.nextInt(5)) {
+      switch (random.nextInt(3)) {
         case 0:
           context = IOContext.DEFAULT;
           break;
         case 1:
-          context = IOContext.READ;
-          break;
-        case 2:
-          context = IOContext.READONCE;
-          break;
-        case 3:
           context = new IOContext(new MergeInfo(randomNumDocs, size, true, -1));
           break;
-        case 4:
+        case 2:
           context = new IOContext(new FlushInfo(randomNumDocs, size));
           break;
         default:
@@ -1873,6 +1885,32 @@ public abstract class LuceneTestCase extends Assert {
     System.clearProperty(ConcurrentMergeScheduler.DEFAULT_CPU_CORE_COUNT_PROPERTY);
   }
 
+  private static ExecutorService executor;
+
+  @BeforeClass
+  public static void setUpExecutorService() {
+    int threads = TestUtil.nextInt(random(), 1, 2);
+    executor =
+        new ThreadPoolExecutor(
+            threads,
+            threads,
+            0L,
+            TimeUnit.MILLISECONDS,
+            new LinkedBlockingQueue<>(),
+            new NamedThreadFactory("LuceneTestCase"));
+    // uncomment to intensify LUCENE-3840
+    // executor.prestartAllCoreThreads();
+    if (VERBOSE) {
+      System.out.println("NOTE: Created shared ExecutorService with " + threads + " threads");
+    }
+  }
+
+  @AfterClass
+  public static void shutdownExecutorService() {
+    TestUtil.shutdownExecutorService(executor);
+    executor = null;
+  }
+
   /** Create a new searcher over the reader. This searcher might randomly use threads. */
   public static IndexSearcher newSearcher(IndexReader r) {
     return newSearcher(r, true);
@@ -1903,8 +1941,32 @@ public abstract class LuceneTestCase extends Assert {
    */
   public static IndexSearcher newSearcher(
       IndexReader r, boolean maybeWrap, boolean wrapWithAssertions, boolean useThreads) {
+    if (useThreads) {
+      return newSearcher(r, maybeWrap, wrapWithAssertions, Concurrency.INTRA_SEGMENT);
+    }
+    return newSearcher(r, maybeWrap, wrapWithAssertions, Concurrency.NONE);
+  }
+
+  /** What level of concurrency is supported by the searcher being created */
+  public enum Concurrency {
+    /** No concurrency, meaning an executor won't be provided to the searcher */
+    NONE,
+    /**
+     * Inter-segment concurrency, meaning an executor will be provided to the searcher and slices
+     * will be randomly created to concurrently search entire segments
+     */
+    INTER_SEGMENT,
+    /**
+     * Intra-segment concurrency, meaning an executor will be provided to the searcher and slices
+     * will be randomly created to concurrently search segment partitions
+     */
+    INTRA_SEGMENT
+  }
+
+  public static IndexSearcher newSearcher(
+      IndexReader r, boolean maybeWrap, boolean wrapWithAssertions, Concurrency concurrency) {
     Random random = random();
-    if (useThreads == false) {
+    if (concurrency == Concurrency.NONE) {
       if (maybeWrap) {
         try {
           r = maybeWrapReader(r);
@@ -1936,41 +1998,26 @@ public abstract class LuceneTestCase extends Assert {
       ret.setSimilarity(classEnvRule.similarity);
       return ret;
     } else {
-      int threads = 0;
-      final ThreadPoolExecutor ex;
-      if (r.getReaderCacheHelper() == null || random.nextBoolean()) {
+      final ExecutorService ex;
+      if (random.nextBoolean()) {
         ex = null;
       } else {
-        threads = TestUtil.nextInt(random, 1, 8);
-        ex =
-            new ThreadPoolExecutor(
-                threads,
-                threads,
-                0L,
-                TimeUnit.MILLISECONDS,
-                new LinkedBlockingQueue<Runnable>(),
-                new NamedThreadFactory("LuceneTestCase"));
-        // uncomment to intensify LUCENE-3840
-        // ex.prestartAllCoreThreads();
-      }
-      if (ex != null) {
+        ex = executor;
         if (VERBOSE) {
-          System.out.println(
-              "NOTE: newSearcher using ExecutorService with " + threads + " threads");
+          System.out.println("NOTE: newSearcher using shared ExecutorService");
         }
-        r.getReaderCacheHelper()
-            .addClosedListener(cacheKey -> TestUtil.shutdownExecutorService(ex));
       }
       IndexSearcher ret;
+      int maxDocPerSlice = random.nextBoolean() ? 1 : 1 + random.nextInt(1000);
+      int maxSegmentsPerSlice = random.nextBoolean() ? 1 : 1 + random.nextInt(10);
       if (wrapWithAssertions) {
-        int maxDocPerSlice = 1 + random.nextInt(1000);
-        int maxSegmentsPerSlice = 1 + random.nextInt(10);
         if (random.nextBoolean()) {
           ret =
               new AssertingIndexSearcher(random, r, ex) {
                 @Override
                 protected LeafSlice[] slices(List<LeafReaderContext> leaves) {
-                  return slices(leaves, maxDocPerSlice, maxSegmentsPerSlice);
+                  return LuceneTestCase.slices(
+                      leaves, maxDocPerSlice, maxSegmentsPerSlice, concurrency);
                 }
               };
         } else {
@@ -1978,37 +2025,47 @@ public abstract class LuceneTestCase extends Assert {
               new AssertingIndexSearcher(random, r.getContext(), ex) {
                 @Override
                 protected LeafSlice[] slices(List<LeafReaderContext> leaves) {
-                  return slices(leaves, maxDocPerSlice, maxSegmentsPerSlice);
+                  return LuceneTestCase.slices(
+                      leaves, maxDocPerSlice, maxSegmentsPerSlice, concurrency);
                 }
               };
         }
-      } else if (frequently()) {
-        int maxDocPerSlice = 1 + random.nextInt(1000);
-        int maxSegmentsPerSlice = 1 + random.nextInt(10);
+      } else {
         ret =
             new IndexSearcher(r, ex) {
               @Override
               protected LeafSlice[] slices(List<LeafReaderContext> leaves) {
-                return slices(leaves, maxDocPerSlice, maxSegmentsPerSlice);
+                return LuceneTestCase.slices(
+                    leaves, maxDocPerSlice, maxSegmentsPerSlice, concurrency);
               }
             };
-      } else {
-        ret =
-            random.nextBoolean() ? new IndexSearcher(r, ex) : new IndexSearcher(r.getContext(), ex);
       }
       ret.setSimilarity(classEnvRule.similarity);
       ret.setQueryCachingPolicy(MAYBE_CACHE_POLICY);
       if (random().nextBoolean()) {
-        ret.setTimeout(
-            new QueryTimeout() {
-              @Override
-              public boolean shouldExit() {
-                return false;
-              }
-            });
+        ret.setTimeout(() -> false);
       }
       return ret;
     }
+  }
+
+  /**
+   * Creates leaf slices according to the concurrency argument, that optionally leverage
+   * intra-segment concurrency by splitting segments into multiple partitions according to the
+   * maxDocsPerSlice argument.
+   */
+  private static LeafSlice[] slices(
+      List<LeafReaderContext> leaves,
+      int maxDocsPerSlice,
+      int maxSegmentsPerSlice,
+      Concurrency concurrency) {
+    assert concurrency != Concurrency.NONE;
+    // Rarely test slices without partitions even though intra-segment concurrency is supported
+    return IndexSearcher.slices(
+        leaves,
+        maxDocsPerSlice,
+        maxSegmentsPerSlice,
+        concurrency == Concurrency.INTRA_SEGMENT && frequently());
   }
 
   /**
@@ -2325,7 +2382,7 @@ public abstract class LuceneTestCase extends Assert {
     int numPasses = 0;
     while (numPasses < 10 && tests.size() < numTests) {
       leftEnum = leftTerms.iterator();
-      BytesRef term = null;
+      BytesRef term;
       while ((term = leftEnum.next()) != null) {
         int code = random.nextInt(10);
         if (code == 0) {
@@ -2420,26 +2477,22 @@ public abstract class LuceneTestCase extends Assert {
   public void assertStoredFieldsEquals(String info, IndexReader leftReader, IndexReader rightReader)
       throws IOException {
     assert leftReader.maxDoc() == rightReader.maxDoc();
+    StoredFields leftStoredFields = leftReader.storedFields();
+    StoredFields rightStoredFields = rightReader.storedFields();
     for (int i = 0; i < leftReader.maxDoc(); i++) {
-      Document leftDoc = leftReader.document(i);
-      Document rightDoc = rightReader.document(i);
+      Document leftDoc = leftStoredFields.document(i);
+      Document rightDoc = rightStoredFields.document(i);
 
       // TODO: I think this is bogus because we don't document what the order should be
       // from these iterators, etc. I think the codec/IndexReader should be free to order this stuff
       // in whatever way it wants (e.g. maybe it packs related fields together or something)
       // To fix this, we sort the fields in both documents by name, but
       // we still assume that all instances with same name are in order:
-      Comparator<IndexableField> comp =
-          new Comparator<IndexableField>() {
-            @Override
-            public int compare(IndexableField arg0, IndexableField arg1) {
-              return arg0.name().compareTo(arg1.name());
-            }
-          };
+      Comparator<IndexableField> comp = Comparator.comparing(IndexableField::name);
       List<IndexableField> leftFields = new ArrayList<>(leftDoc.getFields());
       List<IndexableField> rightFields = new ArrayList<>(rightDoc.getFields());
-      Collections.sort(leftFields, comp);
-      Collections.sort(rightFields, comp);
+      leftFields.sort(comp);
+      rightFields.sort(comp);
 
       Iterator<IndexableField> leftIterator = leftFields.iterator();
       Iterator<IndexableField> rightIterator = rightFields.iterator();
@@ -2465,9 +2518,11 @@ public abstract class LuceneTestCase extends Assert {
   public void assertTermVectorsEquals(String info, IndexReader leftReader, IndexReader rightReader)
       throws IOException {
     assert leftReader.maxDoc() == rightReader.maxDoc();
+    TermVectors leftVectors = leftReader.termVectors();
+    TermVectors rightVectors = rightReader.termVectors();
     for (int i = 0; i < leftReader.maxDoc(); i++) {
-      Fields leftFields = leftReader.getTermVectors(i);
-      Fields rightFields = rightReader.getTermVectors(i);
+      Fields leftFields = leftVectors.get(i);
+      Fields rightFields = rightVectors.get(i);
 
       // Fields could be null if there are no postings,
       // but then it must be null for both
@@ -2705,7 +2760,7 @@ public abstract class LuceneTestCase extends Assert {
             public void visit(int docID, byte[] packedValue) throws IOException {
               int topDocID = ctx.docBase + docID;
               if (docValues.containsKey(topDocID) == false) {
-                docValues.put(topDocID, new HashSet<BytesRef>());
+                docValues.put(topDocID, new HashSet<>());
               }
               docValues.get(topDocID).add(new BytesRef(packedValue.clone()));
             }
@@ -2859,8 +2914,7 @@ public abstract class LuceneTestCase extends Assert {
       }
     }
 
-    List<String> exceptionTypes =
-        expectedTypes.stream().map(c -> c.getSimpleName()).collect(Collectors.toList());
+    List<String> exceptionTypes = expectedTypes.stream().map(Class::getSimpleName).toList();
 
     if (thrown != null) {
       AssertionFailedError assertion =
@@ -2928,12 +2982,11 @@ public abstract class LuceneTestCase extends Assert {
       LinkedHashMap<Class<? extends TO>, List<Class<? extends TW>>> expectedOuterToWrappedTypes,
       ThrowingRunnable runnable) {
     final List<Class<? extends TO>> outerClasses =
-        expectedOuterToWrappedTypes.keySet().stream().collect(Collectors.toList());
+        new ArrayList<>(expectedOuterToWrappedTypes.keySet());
     final Throwable thrown = _expectThrows(outerClasses, runnable);
 
     if (null == thrown) {
-      List<String> outerTypes =
-          outerClasses.stream().map(Class::getSimpleName).collect(Collectors.toList());
+      List<String> outerTypes = outerClasses.stream().map(Class::getSimpleName).toList();
       throw new AssertionFailedError(
           "Expected any of the following outer exception types: "
               + outerTypes
@@ -2954,7 +3007,7 @@ public abstract class LuceneTestCase extends Assert {
             }
           }
           List<String> wrappedTypes =
-              expectedWrappedTypes.stream().map(Class::getSimpleName).collect(Collectors.toList());
+              expectedWrappedTypes.stream().map(Class::getSimpleName).toList();
           AssertionFailedError assertion =
               new AssertionFailedError(
                   "Unexpected wrapped exception type, expected one of "
@@ -2966,8 +3019,7 @@ public abstract class LuceneTestCase extends Assert {
         }
       }
     }
-    List<String> outerTypes =
-        outerClasses.stream().map(Class::getSimpleName).collect(Collectors.toList());
+    List<String> outerTypes = outerClasses.stream().map(Class::getSimpleName).toList();
     AssertionFailedError assertion =
         new AssertionFailedError(
             "Unexpected outer exception type, expected one of "
@@ -3009,7 +3061,7 @@ public abstract class LuceneTestCase extends Assert {
    */
   public static boolean slowFileExists(Directory dir, String fileName) throws IOException {
     try {
-      dir.openInput(fileName, IOContext.DEFAULT).close();
+      dir.openInput(fileName, IOContext.READONCE).close();
       return true;
     } catch (@SuppressWarnings("unused") NoSuchFileException | FileNotFoundException e) {
       return false;
@@ -3233,5 +3285,41 @@ public abstract class LuceneTestCase extends Assert {
     }
 
     return it;
+  }
+
+  private static boolean supportsVectorEncoding(
+      KnnVectorsFormat format, VectorEncoding vectorEncoding) {
+    if (format instanceof HnswBitVectorsFormat) {
+      // special case, this only supports BYTE
+      return vectorEncoding == VectorEncoding.BYTE;
+    }
+    return true;
+  }
+
+  private static boolean supportsVectorSearch(KnnVectorsFormat format) {
+    return (format instanceof FlatVectorsFormat) == false;
+  }
+
+  protected static KnnVectorsFormat randomVectorFormat(VectorEncoding vectorEncoding) {
+    List<KnnVectorsFormat> availableFormats =
+        KnnVectorsFormat.availableKnnVectorsFormats().stream()
+            .map(KnnVectorsFormat::forName)
+            .filter(format -> supportsVectorEncoding(format, vectorEncoding))
+            .filter(format -> supportsVectorSearch(format))
+            .toList();
+    return RandomPicks.randomFrom(random(), availableFormats);
+  }
+
+  /**
+   * This is a test merge scheduler that will always use the intra merge executor to ensure we test
+   * it.
+   */
+  static class TestConcurrentMergeScheduler extends ConcurrentMergeScheduler {
+    @Override
+    public Executor getIntraMergeExecutor(MergePolicy.OneMerge merge) {
+      assert intraMergeExecutor != null : "scaledExecutor is not initialized";
+      // Always do the intra merge executor to ensure we test it
+      return intraMergeExecutor;
+    }
   }
 }
